src/assets/main.css
@import url("https://fonts.googleapis.com/css2?family=Rubik+Maze&display=swap");

body {
  color: var(--color-text);
  background-image: linear-gradient(
    109.6deg,
    rgba(156, 252, 248, 1) 11.2%,
    rgba(110, 123, 251, 1) 91.1%
  );
  transition: color 0.5s, background-color 0.5s;
  line-height: 1.6;
  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
    "Rubik Maze" "Helvetica Neue", sans-serif;
  font-size: 15px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}


@font-face {
    font-family: PermamentMarker;
    src: url("./assets/PermanentMarker-Regular.ttf");
  }


.parallelFont {
  font-family: var(--font);
  font-size: larger;
}

:root {
  --font: PermamentMarker;
}

